Layout fix for comment heading overlapping comment text, started forum base page header

--- a/forums/static/forums/css/forum.css
+++ b/forums/static/forums/css/forum.css
@@ -18,12 +18,87 @@
     font-weight: bold;
 }
 .forum-box {
-    border-collapse: collapse;
-    border-spacing: 0;
-    display: table;
-    table-layout: fixed;
-    width: 100%;
+ 
 }
+.forums-header {
+  background: #4d4d4d;
+  background-image: linear-gradient(to bottom, #4d4d4d 0%, #1a1a1a 100%);
+  border-bottom: 1px solid #262626;
+  border-collapse: collapse;
+  border-spacing: 0;
+  color: #fff;
+  display: table;
+  min-height: 80px;
+  padding: 10px;
+  table-layout: fixed;
+  width: 100%;
+}
+.forums-branding, 
+.forums-search {
+  display: table-cell;
+  vertical-align: top;
+}
+.forums-logo {
+  display: block;
+  height: 100px;
+  padding: 10px;
+  vertical-align: top;
+}
+.forums-logo:focus, 
+.forums-logo:hover {
+  text-decoration: none;
+  text-shadow: 0 0 3px orange;
+}
+.forums-logo img {
+  float: left;
+  margin: 0 10px 0 0;
+  height: 80px;
+  transform: translateZ(0) rotateZ(0);
+  transition: transform 1s ease 0s; 
+}
+.forums-logo:focus img, 
+.forums-logo:hover img {
+  transform: translateZ(0) rotateZ(-360deg);
+}
+.forums-name {
+  display: block;
+  margin-top: 12px;
+  font-family: LinuxLibertineDisplayORegular, "Trebuchet MS", Ubuntu, "Liberation Sans", FreeSans, sans-serif;
+  font-weight: normal;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 1.3;
+  color: #fff;
+}
+.forums-tagline {
+  color: #fff;
+  font-size: 22px;
+  font-weight: normal;
+  font-family: EuphoriaScript;
+}
+
+.forums-search {
+  padding: 10px;
+}
+.forums-search .sr-input {
+    border: medium none;
+    border-radius: 4px 0 0 4px;
+    box-shadow: none;
+    color: #8a8a8a;
+    float: left;
+    height: 40px;
+    padding: 0 10px;
+}
+.forums-search .sr-btn {
+    background: none repeat scroll 0 0 #ff7e28;
+    \border: medium none;
+    border-radius: 0 4px 4px 0;
+    color: #fff;
+    height: 40px;
+    padding: 0 20px;
+}
+
 .forum-box aside {
     display: table-cell;
     float: none;
@@ -41,44 +116,8 @@
     border-radius: 0 4px 4px 0;
     width: 75%;
 }
-.forum-box .sm-side .forum-head {
-    background: #4d4d4d;
-    background-image: linear-gradient(to bottom, #4d4d4d 0%, #1a1a1a 100%);
-    border-bottom: 1px solid #262626;
 
-    color: #fff;
-    min-height: 80px;
-    padding: 10px;
-}
-.forum-head .forums-logo {
-    vertical-align: top;
-}
-.forum-head .forums-logo img {
-    max-height: 59px;
-    margin: 0px;
-    height: 60px;
-}
-.forum-head .forums-name {
-    display: inline-block;
-    margin: 0 0 0 10px;
-}
-.forum-head .forums-name h5 {
-    font-family: LinuxLibertineDisplayORegular, "Trebuchet MS", Ubuntu, "Liberation Sans", FreeSans, sans-serif;
-    font-weight: normal;
-    text-transform: uppercase;
-    font-size: 22px;
 
-    font-weight: 300;
-    margin-bottom: 0;
-    margin-top: 2px;
-    color: #fff;
-}
-.forum-head .forums-name span {
-    color: #fff;
-    font-size: 22px;
-    font-weight: normal;
-    font-family: EuphoriaScript;
-}
 a.forum-dropdown {
     background: none repeat scroll 0 0 #80d3d9;
     border-radius: 2px;
@@ -154,42 +193,9 @@ ul.labels-info li a i {
     margin-bottom: 0;
     padding: 0 22px;
 }
-.forum-head {
-    background: #4d4d4d;
-    background-image: linear-gradient(to bottom, #535353 0%, #292929 100%);
-    border-bottom: 1px solid #262626;
-    color: #fff;
-    min-height: 80px;
-    padding: 20px;
-}
-.forum-head > img,
-.forum-head > a > img {
-    height: 48px;
-    margin: -20px 10px -10px 0px;
-}
-.forum-head h3 {
-    display: inline-block;
-    font-weight: 300;
-    margin: 0;
-    padding-top: 6px;
-}
-.forum-head .sr-input {
-    border: medium none;
-    border-radius: 4px 0 0 4px;
-    box-shadow: none;
-    color: #8a8a8a;
-    float: left;
-    height: 40px;
-    padding: 0 10px;
-}
-.forum-head .sr-btn {
-    background: none repeat scroll 0 0 #ff7e28;
-    \border: medium none;
-    border-radius: 0 4px 4px 0;
-    color: #fff;
-    height: 40px;
-    padding: 0 20px;
-}
+
+
+
 .table-forum .search-context td {
     border-top: 1px solid #efefef;
     color: #999;
@@ -447,6 +453,8 @@ ul {
     background-color: #eee;
 }
 .emoji-bar {
+  clear: both;
+  display: block;
   font-size: 1em;
   margin-top: 1em;
 }
@@ -567,7 +575,7 @@ h3 small.label {
 
 /**
  * Forum topic colors and layout 
- * One @media for > 700px
+ * One @media for > 700px and 40em
  */
 
 .panel-body {
@@ -784,6 +792,7 @@ h3 small.label {
     grid-row-start: 2;
     grid-row-end: span 4;
     padding: 1.6em 2.4vw .6em;
+    z-index: 5; /* more than .comment-header-group */
   }
   .comment-attachments {
     grid-column-start: 3;
@@ -801,6 +810,7 @@ h3 small.label {
     grid-row-start: 1;
     grid-row-end: span 3;
     width: auto; /* override mobile */
+    z-index: 1; /* less than .comment-text */
   }
   
   .comment-header-group::before {
@@ -874,4 +884,17 @@ h3 small.label {
     justify-self: center;
     align-self: center;
   }
+}
+
+/**
+ *   Bootstrap form styles additions and overrides
+ */
+.btn-sm, 
+.btn-group-sm > .btn {
+  border-radius: 2em;
+}
+.input-group-btn > .btn {
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
